
 plugins {
  id "org.sonarqube" version "2.6"
}

apply plugin: 'java'
apply plugin: 'maven'
apply plugin: 'eclipse'

group = 'music_framework'
version = '1.0'

description = """Music Framework"""

sourceCompatibility = 1.8
targetCompatibility = 1.8
jar {
    manifest {
        attributes 'Implementation-Title': 'music-framework',
                   'Implementation-Version': version
    }
}

repositories {
    // Use jcenter for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
    maven { url "http://repo.maven.apache.org/maven2" }
	mavenLocal()
	flatDir {
        name "jarRepository"
        dirs "lib"
    }	
}

uploadArchives {
    repositories {
		add project.repositories.jarRepository
		mavenLocal()
    }
}

dependencies {
	compile files('libs/proxymusic-3.0.jar')
	runtime files('libs/proxymusic-3.0.jar')
    compile group: 'org.mongodb', name: 'mongodb-driver', version:'3.4.2'
	// https://mvnrepository.com/artifact/org.mongodb.morphia/morphia
    compile group: 'org.mongodb.morphia', name: 'morphia', version: '1.3.2'
    compile group: 'junit', name: 'junit', version:'4.12'
    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version:'2.7'
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version:'2.7'
    compile group: 'org.apache.activemq', name: 'activemq-all', version:'5.14.3'
	compile group: 'math-lib', name: 'mathlib-gradle', version: '1.0'
	compile group:  'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.0'
    compile group:  'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.0'
    compile group:  'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
    compile group:  'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.0'
    compile 'org.apache.commons:commons-lang3:3.4'
    compile group:  'javax.json', name: 'javax.json-api', version: '1.1'
}
